# industrialPress_youtube_DMVC

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: dmvc_poc_model.json  evaluation_metrics.json
docs/: 01_data_acquisition_policy.md  02_dataset_schema_and_labeling.md  03_model_architecture.md  04_evaluation_plan.md  05_timeline_and_risks.md  06_youtube_data_pipeline.md  07_executable_poc_development_plan.md  08_design_verification_and_roadmap_status.md
fixtures/synthetic/: candidate_rows_mock.json  sample_clip_manifest.json
schemas/: dmvc_clip.schema.json
scripts/: demo_infer.py  evaluate.py  preprocess.py  roadmap_report.py  run_mvp.py  train.py  validate_json.py  youtube_metadata_crawl.py
src/dmvc_poc/: __init__.py
src/dmvc_poc/data/: __init__.py  dataset.py  rights.py  schema.py
src/dmvc_poc/eval/: __init__.py  gate.py  metrics.py
src/dmvc_poc/infer/: __init__.py  render.py
src/dmvc_poc/models/: __init__.py  multiview.py  rgb_baseline.py
src/dmvc_poc/roadmap/: __init__.py  status.py
src/dmvc_poc/train/: __init__.py  runner.py  smoke.py
tests/: test_config_alignment.py  test_dataset.py  test_gate_thresholds.py  test_manifest_schema.py  test_metrics.py  test_preprocess_script.py  test_rights_gate.py  test_roadmap_compliance.py  test_run_mvp_e2e.py  test_smoke_training.py  test_train_evaluate_demo_scripts.py  test_visualization_outputs.py  test_youtube_crawl_script.py  test_youtube_download_mode.py
