[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dmvc-poc"
version = "0.1.0"
description = "DMVC hydraulic press failure prediction PoC (research codebase)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "jsonschema>=4.21,<5",
  "numpy>=1.26,<3",
  "torch>=2.2,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "scikit-learn>=1.4,<2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --strict-markers"
markers = [
  "smoke: fast CPU smoke tests",
]
